removed Navbar.Header
removed unnecessary syntax, no longer compatible with most recent
version of React bootstrap

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,14 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet"
-    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" 
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+    crossorigin="anonymous"
+    />
+    <!-- Optional Theme -->
+    <link rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
     crossorigin="anonymous"
     />
     <!--
