--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,11 @@
     crossorigin="anonymous"
     />
     <!-- Optional Theme -->
-    <link rel="stylesheet"
+    <!-- <link rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
     crossorigin="anonymous"
-    />
+    /> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
